--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -125,6 +125,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SentimentService.cs" />
+    <Compile Include="Services\TwitterFeedService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
