beetje mooier gemaakt

--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -183,6 +183,7 @@
     <Content Include="Views\Sentiment\Overview.cshtml" />
     <Content Include="Views\Sentiment\Details.cshtml" />
     <Content Include="Views\Sentiment\Trend.cshtml" />
+    <Content Include="Views\Sentiment\Tweets.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
