--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -161,19 +161,20 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Controllers\SentimentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Factories\OverviewFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\LabelHelper.cs" />
     <Compile Include="Helpers\SentimentHelper.cs" />
     <Compile Include="Models\DataPoint.cs" />
     <Compile Include="Models\LabelModel.cs" />
-    <Compile Include="Models\OverviewItemViewModel.cs" />
-    <Compile Include="Models\DetailViewModel.cs" />
-    <Compile Include="Models\OverviewViewModel.cs" />
+    <Compile Include="Models\OverviewItemModel.cs" />
+    <Compile Include="Models\DetailModel.cs" />
+    <Compile Include="Models\OverviewModel.cs" />
+    <Compile Include="Models\TweetModel.cs" />
     <Compile Include="Models\TweetSentimentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sentiment.cs" />
+    <Compile Include="Models\Sentiment.cs" />
     <Compile Include="Services\SentimentService.cs" />
     <Compile Include="Services\TwitterFeedService.cs" />
   </ItemGroup>
