Mock SentimentService gebruiken en config voor nieuwe Azure service toevoegen

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -9,8 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="CognitiveService.Endpoint" value="https://sentimentservice.cognitiveservices.azure.com/" />
-    <add key="CognitiveService.Key" value="c3e715b9e4554d6c8ab1f8ca6c99df79" />
+
+    <!--<add key="CognitiveService.Endpoint" value="https://sentimentservice.cognitiveservices.azure.com/" />-->
+    <!--<add key="CognitiveService.Key" value="c3e715b9e4554d6c8ab1f8ca6c99df79" />-->
+
+    <add key="CognitiveService.Endpoint" value="https://onvz-sentiment-service.cognitiveservices.azure.com/" />
+    <add key="CognitiveService.Key" value="0d8500f3da134d7aad601b9b860a38c0" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
