--- a/src/Sentimenteel.Tests/app.config
+++ b/src/Sentimenteel.Tests/app.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="CognitiveService.Endpoint" value="https://sentimentservice.cognitiveservices.azure.com/" />
-    <add key="CognitiveService.Key" value="c3e715b9e4554d6c8ab1f8ca6c99df79" />
+    <!--<add key="CognitiveService.Endpoint" value="https://sentimentservice.cognitiveservices.azure.com/" />-->
+    <!--<add key="CognitiveService.Key" value="c3e715b9e4554d6c8ab1f8ca6c99df79" />-->
+
+    <add key="CognitiveService.Endpoint" value="https://onvz-sentiment-service.cognitiveservices.azure.com/" />
+    <add key="CognitiveService.Key" value="0d8500f3da134d7aad601b9b860a38c0" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
