--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -49,6 +49,9 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Autofac, Version=4.9.4.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.9.4\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Azure.AI.TextAnalytics, Version=5.0.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Azure.AI.TextAnalytics.5.0.0\lib\netstandard2.0\Azure.AI.TextAnalytics.dll</HintPath>
     </Reference>
@@ -66,28 +69,70 @@
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleNetNlp, Version=3.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SimpleNetNlp.3.8.0\lib\SimpleNetNlp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Diagnostics.DiagnosticSource.4.6.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http, Version=4.1.1.3, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Net.Http.4.3.4\lib\net46\System.Net.Http.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
     </Reference>
+    <Reference Include="System.Reflection.TypeExtensions, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Reflection.TypeExtensions.4.5.1\lib\net461\System.Reflection.TypeExtensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Runtime.4.3.0\lib\net462\System.Runtime.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security.Cryptography.Algorithms, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Security.Cryptography.Algorithms.4.3.0\lib\net463\System.Security.Cryptography.Algorithms.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Security.Cryptography.Encoding, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Security.Cryptography.Encoding.4.3.0\lib\net46\System.Security.Cryptography.Encoding.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Security.Cryptography.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Security.Cryptography.Primitives.4.3.0\lib\net46\System.Security.Cryptography.Primitives.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Text.Encodings.Web, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Text.Encodings.Web.4.6.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
@@ -136,9 +181,31 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="System.Net.Http">
-    </Reference>
     <Reference Include="System.Net.Http.WebRequest">
+    </Reference>
+    <Reference Include="Tweetinvi, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Controllers, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Controllers.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Core, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Credentials, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Credentials.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Logic, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Logic.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Security, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.Streams, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.Streams.dll</HintPath>
+    </Reference>
+    <Reference Include="Tweetinvi.WebLogic, Version=5.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TweetinviAPI.5.0.3\lib\netstandard2.0\Tweetinvi.WebLogic.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease, Version=1.6.5135.21930, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -191,9 +258,48 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="nlp-models\lexparser\englishPCFG.ser.gz" />
+    <Content Include="nlp-models\sentiment\sentiment.ser.gz" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\onvz-sentiment-calculator - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="nlp-libs\ejml-0.23.dll" />
+    <Content Include="nlp-libs\IKVM.AWT.WinForms.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Beans.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Charsets.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Cldrdata.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Corba.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Core.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Jdbc.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Localedata.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Management.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Media.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Misc.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Naming.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Nashorn.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Remoting.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Security.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.SwingAWT.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Text.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Tools.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.Util.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.API.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.Bind.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.Crypto.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.Parse.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.Transform.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.WebServices.dll" />
+    <Content Include="nlp-libs\IKVM.OpenJDK.XML.XPath.dll" />
+    <Content Include="nlp-libs\IKVM.Runtime.dll" />
+    <Content Include="nlp-libs\IKVM.Runtime.JNI.dll" />
+    <Content Include="nlp-libs\javax.json.dll" />
+    <Content Include="nlp-libs\joda-time.dll" />
+    <Content Include="nlp-libs\jollyday.dll" />
+    <Content Include="nlp-libs\protobuf.dll" />
+    <Content Include="nlp-libs\slf4j-api.dll" />
+    <Content Include="nlp-libs\slf4j-simple.dll" />
+    <Content Include="nlp-libs\stanford-corenlp-3.8.0.dll" />
+    <Content Include="nlp-libs\xom.dll" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -283,7 +389,13 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
     <Error Condition="!Exists('..\..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\..\packages\SimpleNetNlp.3.8.0\build\SimpleNetNlp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SimpleNetNlp.3.8.0\build\SimpleNetNlp.targets'))" />
+    <Error Condition="!Exists('..\..\packages\SimpleNetNlp.Models.LexParser.3.8.0\build\SimpleNetNlp.Models.LexParser.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SimpleNetNlp.Models.LexParser.3.8.0\build\SimpleNetNlp.Models.LexParser.targets'))" />
+    <Error Condition="!Exists('..\..\packages\SimpleNetNlp.Models.Sentiment.3.8.0\build\SimpleNetNlp.Models.Sentiment.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SimpleNetNlp.Models.Sentiment.3.8.0\build\SimpleNetNlp.Models.Sentiment.targets'))" />
   </Target>
+  <Import Project="..\..\packages\SimpleNetNlp.3.8.0\build\SimpleNetNlp.targets" Condition="Exists('..\..\packages\SimpleNetNlp.3.8.0\build\SimpleNetNlp.targets')" />
+  <Import Project="..\..\packages\SimpleNetNlp.Models.LexParser.3.8.0\build\SimpleNetNlp.Models.LexParser.targets" Condition="Exists('..\..\packages\SimpleNetNlp.Models.LexParser.3.8.0\build\SimpleNetNlp.Models.LexParser.targets')" />
+  <Import Project="..\..\packages\SimpleNetNlp.Models.Sentiment.3.8.0\build\SimpleNetNlp.Models.Sentiment.targets" Condition="Exists('..\..\packages\SimpleNetNlp.Models.Sentiment.3.8.0\build\SimpleNetNlp.Models.Sentiment.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
