--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -329,6 +329,8 @@
     <Content Include="Views\Sentiment\Tweets.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\Home\Future.cshtml" />
+    <Content Include="Views\Home\Innovation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
